@@ -1,0 +1,131 @@
+<?php
+
+namespace Wikibase\Lib;
+use ValueParsers\Result;
+use ValueParsers\StringValueParser;
+use ValueParsers\ParserOptions;
+use ValueParsers\ValueParser;
+
+/**
+ * Parser that parses entity id strings into EntityId objects.
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along
+ * with this program; if not, write to the Free Software Foundation, Inc.,
+ * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
+ * http://www.gnu.org/copyleft/gpl.html
+ *
+ * @since 0.4
+ *
+ * @file
+ * @ingroup ValueParsers
+ *
+ * @licence GNU GPL v2+
+ * @author Jeroen De Dauw < jeroendedauw@gmail.com >
+ */
+class EntityIdParser extends StringValueParser {
+
+	/**
+	 * Option name for the required prefixmap option.
+	 * The value of this option should be an array of
+	 * prefixes (string) pointing to the entity type
+	 * (string) they map to.
+	 *
+	 * @since 0.4
+	 */
+	const OPT_PREFIX_MAP = 'prefixmap';
+
+	/**
+	 * Cache field that holds the regex used by @see getIdParts
+	 *
+	 * Note that this caching does not get invalidated when changing the options!
+	 *
+	 * @since 0.4
+	 *
+	 * @var string|boolean false
+	 */
+	protected $regex = false;
+
+	/**
+	 * @since 0.4
+	 *
+	 * @param ParserOptions|null $options
+	 */
+	public function __construct( ParserOptions $options = null ) {
+		parent::__construct( $options );
+
+		$this->requireOption( self::OPT_PREFIX_MAP );
+	}
+
+	/**
+	 * @see StringValueParser::stringParse
+	 *
+	 * @since 0.4
+	 *
+	 * @param string $value
+	 *
+	 * @return Result
+	 */
+	protected function stringParse( $value ) {
+		$idParts = $this->getIdParts( $value );
+
+		if ( count( $idParts ) < 3 || !ctype_digit( $idParts[2] ) ) {
+			return Result::newErrorText( 'Not an EntityId' );
+		}
+
+		$entityType = $this->getEntityTypeForPrefix( $idParts[1] );
+
+		if ( $entityType === null ) {
+			return Result::newErrorText( 'EntityId has an invalid prefix' );
+		}
+
+		return Result::newSuccess( new \Wikibase\EntityId( $entityType, (int)$idParts[2] ) );
+	}
+
+	/**
+	 * @since 0.4
+	 *
+	 * @param string $prefix
+	 *
+	 * @return string|null
+	 */
+	protected function getEntityTypeForPrefix( $prefix ) {
+		$typeMap = $this->getOption( self::OPT_PREFIX_MAP );
+		return array_key_exists( $prefix, $typeMap ) ? $typeMap[$prefix] : null;
+	}
+
+	/**
+	 * Get individual parts of an id.
+	 *
+	 * @since 0.4
+	 *
+	 * @param string $id
+	 *
+	 * @return array The actual id broken up in prefix, number, hash and fragment and fragment alone
+	 */
+	protected function getIdParts( $id ) {
+		if ( $this->regex === false ) {
+			$prefixes = array();
+
+			foreach ( array_keys( $this->getOption( self::OPT_PREFIX_MAP ) ) as $prefix ) {
+				$prefixes[] = preg_quote( $prefix );
+			}
+
+			$this->regex = '/^(' . implode( '|', $prefixes ) . '|)(\d+)(#.*|)$/';
+		}
+
+		preg_match( $this->regex, strtolower( $id ), $matches );
+
+		return $matches;
+	}
+
+}
